# C2S-ICSE

./: .gitignore  README.md  pyproject.toml
evaluation_results/: README.md
evaluation_results/constraints/LLM/ClaudeSonnet46/: analysis_report.json  check_summary.json
evaluation_results/constraints/LLM/DS4Flash/: analysis_report.json  check_summary.json
evaluation_results/constraints/LLM/GPT55/: analysis_report.json  check_summary.json
evaluation_results/outputs/: CHECK_OUTPUTS.md
evaluation_results/results/case_study/: case_study_summary.json  expert_review.json
evaluation_results/scripts/: RQ1_human_evaluation.py  RQ1_time.py  RQ1_unit_validation.py  RQ2_perturbation_signal.py  RQ3_number.py  RQ3_perturbation_signal.py  RQ3_time.py
source_code/: README.md
source_code/inputs/taxi/: context_schema.toml  scenario.txt
source_code/modules/check/: __init__.py  __main__.py  check.py
source_code/modules/instantiation/: __init__.py  __main__.py
source_code/modules/invention/: __init__.py  __main__.py  grammars.py  statistics.py
source_code/modules/utils/: __init__.py  log.py  timeout.py
supplementary_materials/: README.md
supplementary_materials/human_evaluation_guidelines/: README.md  example.md  guide.md
supplementary_materials/human_evaluation_guidelines/background/: fields.md  scenario.md
supplementary_materials/human_evaluation_guidelines/questionnaire/: group_1.md  group_2.md
supplementary_materials/prompts/: intent_semantics_generation.txt  system_prompt.txt  template_synthesis_1.txt  template_synthesis_2.txt
(+9675 files in other folders)
